@@ -5,6 +5,7 @@
 * https://github.com/clj-commons/etaoin/issues/383[#383]: Drop testing for Safari on Windows
 * https://github.com/clj-commons/etaoin/issues/388[#388]: Drop testing for PhantomJS
 * https://github.com/clj-commons/etaoin/issues/384[#384]: Look for safaridriver on PATH by default
+* https://github.com/clj-commons/etaoin/issues/402[#402]: Only send body for webdriver POST requests to appease safaridriver
 * Docs
 ** https://github.com/clj-commons/etaoin/issues/393[#393]: Add changelog
 ** https://github.com/clj-commons/etaoin/issues/396[#396]: Move from Markdown to AsciiDoc
